GNOME Bugzilla – Bug 758151
rtpgstdepay does not deserialize custom events
Last modified: 2015-12-09 14:06:56 UTC
Seems that a bug was introduced with http://cgit.freedesktop.org/gstreamer/gst-plugins-good/commit/gst/rtp?id=3d7b0f30d748ad1c8e2c5d3528bfbdfe21cfde60 and custom events are dropped in the depayloder.
Created attachment 315644 [details] [review] Unit test that exhibits the issue
Created attachment 315645 [details] [review] Proposed fix
Can you explain in the commit message what exactly the problem is and why this fixes it?
Created attachment 315699 [details] [review] Proposed fix
Can I push the test and the fix?
I believe Wim said on irc the other day that your patch looks good to him, so you should feel free to push both once you're happy with them.
commit 84b6743cf813651a6a6107ab3a875d2108cb6da7 Author: Josep Torra <n770galaxy@gmail.com> Date: Sun Nov 15 17:16:29 2015 -0800 rtpgstdepay: Properly handle backward compat for event deserialization Actual code is checking for a NULL terminator and a ';' terminator, for backward compat, in a chained way that cause all events being rejected. The proper condition is to reject the events when terminator isn't in ['\0', ';'] set. https://bugzilla.gnome.org/show_bug.cgi?id=758151 commit f8b9360dadf48d24a27011c56f06d784736155d7 Author: Josep Torra <n770galaxy@gmail.com> Date: Sun Nov 15 17:11:02 2015 -0800 tests: rtp-payloading: Test for handling of custom events in rtpgst Add a simple test that checks proper serialization/deserialization of custom events with rtpgstpay and rtpgstdepay.